--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.7.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
