--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.7.0",
+    "@nuxt/image": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
