--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,8 @@
-# https://github.com/actions/deploy-pages#usage
+# If you are not using a custom domain, you need to set NUXT_APP_BASE_URL to your repository-slug for your build step.
+
+#Example: https://<user>.github.io/<repository>/ = NUXT_APP_BASE_URL=/<repository>/ npx nuxt build --preset github_pages
+
+
 name: Deploy to GitHub Pages
 on:
   workflow_dispatch:
@@ -9,16 +13,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - run: corepack enable
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
       # Pick your own package manager and build script
       - run: npm install
       - run: NUXT_APP_BASE_URL=/ npx nuxt build --preset github_pages
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./.output/public
   # Deployment job
@@ -38,4 +42,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
